<resources>
    <string name="app_name">MyQICQ</string>
    <string name="start">start</string>
    <string name="more">more</string>
    <string name="QICQ">QICQ</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="Code">Code</string>
    <string name="Login">Login</string>
    <string name="Forget_Password">Forget Password?</string>
    <string name="Register">Register</string>
    <string name="back">back</string>
    <string name="Verity_Account">Verify Account</string>
    <string name="Verity">Verify</string>
    <string name="Send_email">Send Email</string>
    <string name="NULL">NULL</string>
    <string name="密码">密码</string>
    <string name="请输入密码">请输入密码</string>
    <string name="请再次输入密码">请再次输入密码</string>
    <string name="重置密码">重置密码</string>
    <string name="消息">消息</string>
    <string name="注册">注册</string>
    <string name="登录">登录</string>
    <string name="忘记密码">忘记密码</string>
    <string name="默认消息">一整个宇宙，换一颗红豆</string>
    <string name="张三">张三</string>
    <string name="发送">发送</string>
    <string name="添加好友">添加好友</string>
    <string name="添加">添加</string>
    <string name="你好">你好</string>
    <string name="发表">发表</string>
    <string name="邮箱">邮箱</string>
    <string name="验证">验证</string>
    <string name="确认">确认</string>
    <string name="编辑">编辑</string>
    <string name="用户名">用户名</string>
    <string name="验证码">验证码</string>
    <string name="新朋友">新朋友</string>
    <string name="个人中心">个人中心</string>
    <string name="验证账号">验证账号</string>
    <string name="选择照片">选择照片</string>
    <string name="我的位置">我的位置</string>
    <string name="我的动态">我的动态</string>
    <string name="我的钱包">我的钱包</string>
    <string name="我的相册">我的相册</string>
    <string name="我的收藏">我的收藏</string>
    <string name="我的文件">我的文件</string>
    <string name="亲密空间">亲密空间</string>
    <string name="我的个性装扮">我的个性装扮</string>
    <string name="保存位置">保存位置</string>
    <string name="退出登录">退出登录</string>
    <string name="编辑动态">编辑动态</string>
    <string name="我的空间">我的空间</string>
    <string name="请输入文字">请输入文字</string>
    <string name="发送验证码">发送验证码</string>
    <string name="超级QQ秀">超级QQ秀</string>
    <string name="_5分钟前">5分钟前</string>
    <string name="_1">1</string>
    <string name="a">A</string>
    <string name="test">test</string>
    <string name="_0">0</string>
</resources>