<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background3"
    tools:context=".Fragment.LoginFragment">
    
    <TextView
        android:id="@+id/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_80dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/QICQ"
        android:textColor="@color/White"
        android:textSize="@dimen/dimen_50sp"
        android:textStyle="normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    
    <EditText
        android:id="@+id/Username_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_30dp"
        android:layout_marginRight="@dimen/dimen_30dp"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:alpha="0.8"
        android:autofillHints=""
        android:hint="@string/用户名"
        android:textColorHint="@color/Black"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextView"
        />

    <EditText
        android:id="@+id/Password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_30dp"
        android:layout_marginRight="@dimen/dimen_30dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:alpha="0.8"
        android:autofillHints=""
        android:hint="@string/密码"
        android:textColorHint="@color/Black"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/Username_edittext"
        app:layout_constraintRight_toRightOf="@id/Username_edittext"
        app:layout_constraintTop_toBottomOf="@id/Username_edittext"
        />
    
    <Button
        android:id="@+id/Login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dimen_4dp"
        android:translationZ="@dimen/dimen_4dp"
        android:layout_marginLeft="@dimen/dimen_80dp"
        android:layout_marginRight="@dimen/dimen_80dp"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:alpha="0.7"
        android:background="@drawable/button_background"
        android:text="@string/登录"
        android:textAllCaps="false"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Password_edittext"
        />

    <TextView
        android:id="@+id/Forget_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/忘记密码"
        app:layout_constraintLeft_toLeftOf="@id/Username_edittext"
        app:layout_constraintTop_toBottomOf="@id/Login_button"
        />

    <TextView
        android:id="@+id/Register_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/注册"
        app:layout_constraintRight_toRightOf="@id/Username_edittext"
        app:layout_constraintTop_toBottomOf="@id/Login_button"
        />

    <ProgressBar
        android:id="@+id/Login_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>