<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/Message_imageview"
        android:layout_width="@dimen/dimen_50dp"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginStart="@dimen/dimen_15dp"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:layout_marginBottom="@dimen/dimen_15dp"
        android:contentDescription="@string/NULL"
        android:scaleType="fitXY"
        android:src="@mipmap/user"
        app:layout_constraintBottom_toTopOf="@id/Line_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/MessageTitle_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_15dp"
        android:text="@string/张三"
        android:textColor="@color/_181818"
        android:textSize="@dimen/dimen_20sp"
        app:layout_constraintLeft_toRightOf="@id/Message_imageview"
        app:layout_constraintTop_toTopOf="@id/Message_imageview"
        />

    <TextView
        android:id="@+id/MessageContent_textview"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_15dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/默认消息"
        android:textColor="@color/B1B1B1"
        android:textSize="@dimen/dimen_15sp"
        app:layout_constraintBottom_toBottomOf="@id/Message_imageview"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/Message_imageview"
        app:layout_constraintRight_toLeftOf="@id/Prompt_textview"
        />

    <TextView
        android:id="@+id/Prompt_textview"
        android:layout_width="@dimen/dimen_20dp"
        android:layout_height="@dimen/dimen_20dp"
        android:layout_marginEnd="@dimen/dimen_15dp"
        android:background="@drawable/prompt_background"
        android:gravity="center"
        android:text="@string/_1"
        android:textColor="@color/White"
        android:textSize="@dimen/dimen_10sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/Line_view"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@color/EEEEEE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="@id/MessageContent_textview"
        />

</androidx.constraintlayout.widget.ConstraintLayout>