<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.MeFragment">

    <ImageView
        android:id="@+id/Avatar_imageview"
        android:layout_width="@dimen/dimen_120dp"
        android:layout_height="@dimen/dimen_120dp"
        android:layout_marginTop="@dimen/dimen_80dp"
        android:clickable="true"
        android:contentDescription="@string/NULL"
        android:focusable="true"
        android:scaleType="fitXY"
        android:src="@mipmap/user"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:text="@string/个人中心"
        android:textColor="@color/Black"
        android:textSize="@dimen/dimen_30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Avatar_imageview"
        />

    <Button
        android:id="@+id/Logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:layout_marginBottom="@dimen/dimen_30dp"
        android:background="@drawable/logout_button"
        android:text="@string/退出登录"
        android:textAllCaps="false"
        android:textColor="@color/Red"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>