<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background8"
    tools:context=".Fragment.RegisterFragment">
    
    <ImageButton
        android:id="@+id/Back_image_button"
        android:layout_width="@dimen/dimen_30dp"
        android:layout_height="@dimen/dimen_30dp"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:background="@mipmap/back"
        android:contentDescription="@string/back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_80dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/注册"
        android:textColor="@color/White"
        android:textSize="@dimen/dimen_50sp"
        android:textStyle="normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/Username_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_30dp"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:layout_marginRight="@dimen/dimen_30dp"
        android:alpha="0.8"
        android:autofillHints=""
        android:hint="@string/用户名"
        android:textColorHint="@color/Black"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextView"
        />

    <EditText
        android:id="@+id/Password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_30dp"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:layout_marginRight="@dimen/dimen_30dp"
        android:alpha="0.8"
        android:autofillHints=""
        android:hint="@string/密码"
        android:textColorHint="@color/Black"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/Username_edittext"
        app:layout_constraintLeft_toRightOf="@id/Username_edittext"
        app:layout_constraintTop_toBottomOf="@id/Username_edittext"
        tools:ignore="TextFields"
        />

    <EditText
        android:id="@+id/Email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_30dp"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:layout_marginRight="@dimen/dimen_30dp"
        android:alpha="0.8"
        android:autofillHints=""
        android:hint="@string/邮箱"
        android:textColorHint="@color/Black"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/Password_edittext"
        app:layout_constraintLeft_toRightOf="@id/Password_edittext"
        app:layout_constraintTop_toBottomOf="@id/Password_edittext"
        tools:ignore="TextFields"
        />

    <Button
        android:id="@+id/Register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_80dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_80dp"
        android:alpha="0.7"
        android:background="@drawable/button_background"
        android:text="@string/注册"
        android:textAllCaps="false"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Email_edittext"
        />

    <ProgressBar
        android:id="@+id/Register_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        />

</androidx.constraintlayout.widget.ConstraintLayout>