<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/Blank_textview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_30dp"
        android:background="@color/EEEEEE"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dimen_20dp"
        android:text="@string/a"
        android:textColor="@color/_878787"
        android:textSize="@dimen/dimen_15sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry"
        />


    <ImageView
        android:id="@+id/Contact_imageview"
        android:layout_width="@dimen/dimen_40dp"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:contentDescription="@string/NULL"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@id/Contact_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Blank_textview"
        />

    <TextView
        android:id="@+id/Contact_textview"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:gravity="center"
        android:text="@string/张三"
        android:textColor="@color/_181818"
        android:textSize="@dimen/dimen_20sp"
        app:layout_constraintBottom_toTopOf="@id/Contact_view"
        app:layout_constraintLeft_toRightOf="@id/Contact_imageview"
        app:layout_constraintTop_toBottomOf="@id/Blank_textview"
        />

    <View
        android:id="@+id/Contact_view"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@color/EEEEEE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="@id/Contact_textview"
        />

    <View
        android:id="@+id/ContactLeft_view"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@color/EEEEEE"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/Contact_textview"
        />

</androidx.constraintlayout.widget.ConstraintLayout>